--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "touch": "^1.0.0",
     "tough-cookie": "^2.3.1",
     "tough-cookie-filestore": "0.0.1",
+    "tough-cookie-firebasestore" : "0.0.2",
     "underscore": "^1.8.3",
     "underscore.string": "^3.2.2",
     "socks5-https-client": "^1.1.3"
